# client-pix

./: .env.example  .env.template  .gitignore  CONTRIBUTING.md  Caddyfile  LICENSE  PRD_Client_Pix.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.selfhost.yml  start.sh  upgrade.sh
apps/python/: .dockerignore  .env.template  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  router.py
apps/python/alembic/: env.py  script.py.mako
apps/python/alembic/versions/: 20260109_000000_001_initial_schema.py  20260115_000000_002_add_2fa_fields.py
apps/python/api/albums/: albums_api.py
apps/python/api/auth/: auth_api.py
apps/python/api/files/: files_api.py
apps/python/api/share_links/: share_links_api.py  share_public_api.py
apps/python/api/system/: system_api.py
apps/python/api/uploads/: uploads_api.py
apps/python/core/: __init__.py  config.py  database.py  rate_limit.py
apps/python/models/api/: albums_api_models.py  auth_api_models.py  share_links_api_models.py  system_api_models.py  uploads_api_models.py
apps/python/models/db/: __init__.py  admin_db_models.py  album_db_models.py  file_hash_db_models.py  (+2 more)
apps/python/scripts/: regenerate_thumbnails.py  regenerate_video_thumbnails.py  reset_password.py
apps/python/services/: storage_service.py
apps/python/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_security.py
apps/python/utils/: __init__.py  cleanup_util.py  download_util.py  jwt_util.py  response_util.py  security_util.py  slug_util.py  url_util.py
(+78 files in other folders)
